--- a/room.html
+++ b/room.html
@@ -9,6 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/room.css">
     <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/modal.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -51,7 +52,86 @@
                     </footer>
                 </form>
             </section>
+            <section id="questions">
+                <h2 class="sr-only">Perguntas da comunidade</h2>
+                <div class="questions">
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="./assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                            <p>Qual a diferença entre const, var e let no Javascript?</p>
+                            </div>
+                        </div>
+                        <div class="action">   
+                            <a href="#" class="check">
+                                <img src="./assets/check.svg" alt="Check">
+                                Marcar como lida
+                            </a>
+                            <a href="#" class="delete">
+                                <img src="./assets/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="./assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                            <p>O que é TypeScript?</p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <a href="#" class="check">
+                                <img src="./assets/check.svg" alt="Check">
+                                Marcar como lida
+                            </a>
+                            <a href="#" class="delete">
+                                <img src="./assets/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+                    <div class="question-wrapper read">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="./assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                            <p>O que é EcmaScript?</p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <a href="#" class="delete">
+                                <img src="./assets/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal-wrapper">
+        <div class="modal">
+            <h2>Excluir pergunta</h2>
+            <p>Tem certeza que deseja excluir esta pergunta?</p>
+
+            <form action="#">
+                <label for-id="password" class="sr-only">Digite sua senha admin</label>
+                <input type="password" name="password" placeholder="Digite sua senha" id="password">
+                
+                <div class="buttons">
+                    <div class="button grey">Cancelar</div>
+                    <button class="red">Sim, excluir</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
